--- a/templates/leaf-base/resources/less/_mixins/_css3/m-transitions.less
+++ b/templates/leaf-base/resources/less/_mixins/_css3/m-transitions.less
@@ -7,3 +7,16 @@
 	-o-transition:      @range @time @ease;
 	transition:         @range @time @ease;
 }
+
+.transition-two (	@range-1:	all, 
+					@time-1:	0.2s, 
+					@ease-1:	ease-in-out,
+					@range-2:	all, 
+					@time-2:	0.2s, 
+					@ease-2:	ease-in-out	) 
+{
+	-webkit-transition: @range-1 @time-1 @ease-1,  @range-2 @time-2 @ease-2;
+	-moz-transition:    @range-1 @time-1 @ease-1,  @range-2 @time-2 @ease-2;
+	-o-transition:      @range-1 @time-1 @ease-1,  @range-2 @time-2 @ease-2;
+	transition:         @range-1 @time-1 @ease-1,  @range-2 @time-2 @ease-2;
+}
